# Workbench

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  DESIGN.md  README.md  design-tokens.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
UI/: app.js  index.html  skills-market-sketch.html  styles.css  workbench-redesign.css  workbench-redesign.html  workbench-redesign.js
UI/settings-concept/: index.html  settings-concept.css  settings-concept.js
docs/: ARCHITECTURE.md  PRD.md
docs/adr/: 2026-06-16-project-open-profiles.md  2026-06-16-resource-radar-duplicate-merge.md  2026-06-18-skill-categories-table.md  2026-06-19-skills-sh-self-managed-install.md  2026-06-20-skills-sh-cli-adapter.md  README.md
docs/ai/: context-map.md
docs/audits/: 2026-06-19-skills-update-open-profile-audit.md  README.md
docs/capabilities/: README.md  app-lifecycle.md  app-update.md  diagnostics.md  (+3 more)
src/: App.test.tsx  App.tsx  main.tsx  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_lifecycle.rs  app_update.rs  data_backup.rs  diagnostics.rs  lib.rs  main.rs  projects.rs  radar.rs  skills.rs
src-tauri/src/diagnostics/: health.rs  system.rs
src-tauri/src/projects/: db.rs  launch.rs  profiles.rs  remote_import.rs  types.rs
src-tauri/src/radar/: db.rs  duplicates.rs  github.rs  normalize.rs  types.rs
src-tauri/src/skills/: categories.rs  cli.rs  custom_tools.rs  db.rs  filesystem.rs  github_import.rs  importer.rs  market.rs  migration.rs  project_scope.rs  tool_targets.rs  types.rs
(+111 files in other folders)
