[package]
name = "workbench"
version = "0.3.0"
description = "Local-first AI development workbench"
authors = ["Workbench"]
edition = "2021"

[lib]
name = "workbench_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
rusqlite = { version = "0.32", features = ["bundled"] }
serde_yaml = "0.9"
tempfile = "3"
walkdir = "2"
zip = "2"
regex = "1"
ureq = { version = "2", features = ["json"] }
# Keep Tauri's cookie dependency compatible with the current stable Rust toolchain.
time = "=0.3.36"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
tauri-plugin-autostart = "2.5.1"
